2003-08-26 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added GDK locking around gconf operations in
	OnILSTimeout. Fixed leak in destructor.
	
2003-08-26 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Added --enable-debug option.
	
2003-08-26  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-08-25 Damien Sandras  <dsandras@seconix.com>

	* src/misc.cpp: Fixed tooltip settings. Thanks to Stefan Bruns for
	spotting this!
	
2003-08-24 Damien Sandras  <dsandras@seconix.com>

	* src/gnomemeeting.cpp, src/main_window.cpp: Permit GM to start
	without manager when plugins are not compiled in, but not without
	audio devices.
	
	* src/videograbber.cpp: Reverted to the old way of initialising 
	things as it seems some drivers have problems with the new one.
	
2003-08-22 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Small cleanup.
	
2003-08-22 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Update the volume sliders when the audio
	channels are started.
	
2003-08-22 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp, src/chat_window.cpp, src/config.cpp, 
	src/endpoint.cpp, src/endpoint.h, src/gnomemeeting.cpp, 
	src/main_window.cpp, src/urlhandler.cpp: Removed a few 
	theorically possible deadlocks. Removed GetCurrentConnection
	so that we use the OpenH323 one with Locks. Made sure 2 mutexes
	are never taken in 2 different orders in 2 different
	threads, including for the GDK lock.
	
2003-08-20  William Jon McCann  <mccann@jhu.edu>

	* src/endpoint.cpp (SetSoundChannelPlayDevice):
	(SetSoundChannelRecordDevice):  Fix build error.

2003-08-20 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Optimized SetSoundChannelPlayerDevice and 
	SetSoundChannelRecorderDevice so that they do not rebuild the
	devices list if GM already has it in its internal structures.
	
2003-08-19 Damien Sandras  <dsandras@seconix.com>
