@@ -1,5 +1,9 @@
 2003-08-26 Damien Sandras  <dsandras@seconix.com>
 
+	* src/gnomemeeting.cpp: Made sure everything is correctly initialized.
+	
+2003-08-26 Damien Sandras  <dsandras@seconix.com>
+
 	* src/endpoint.cpp: Added GDK locking around gconf operations in
 	OnILSTimeout. Fixed leak in destructor.
 	
